--- a/src/app/components/transaction-pane.component.css
+++ b/src/app/components/transaction-pane.component.css
@@ -1,3 +1,9 @@
+:host {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
 m-transaction-list {
   flex: 4;
 }
