--- a/src/app/style/index.css
+++ b/src/app/style/index.css
@@ -1,4 +1,4 @@
-@import url("./vars.css");
+@import url('./vars.css');
 
 *,
 *::before,
@@ -21,4 +21,8 @@ body {
   overflow: hidden;
 
   background-color: var(--white);
+}
+
+router-outlet {
+  display: none;
 }
